2000-09-15  Bart Schaefer  <schaefer@zsh.org>

	* unposted: Doc/Zsh/contrib.yo: Missing hunk from 12765 (replace
	another use of "wordcode").

2000-09-14  Bart Schaefer  <schaefer@zsh.org>

	* 12804: Src/builtin.c: "typeset -m" implies "-g".

	* unposted: Completion/Commands/_complete_debug: Changed my mind
	about the edit to 12800.

2000-09-13  Bart Schaefer  <schaefer@zsh.org>

	* 12800: E. Jay Berkenbilt: Completion/Commands/_complete_debug:
	Quote the file name pushed onto the history, in case the command
	word has strange characters in it.  (Slighty edited.)

2000-09-11  Bart Schaefer  <schaefer@zsh.org>

	* 12793: Completion/Builtins/_zle, Doc/Zsh/compwid.yo,
	Doc/Zsh/mod_zle.yo: Convert _zle to use _arguments; fix typos.

2000-09-08  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>

	* 12779: Src/system.h: Comment out #define _XPG_IV for sinix.
	It was not correct to set it here, and is not needed with
	currently supported versions. If anybody happens to run really
	outdated SINIX, we should add check for gettimeofday prototype
	instead.

2000-09-07  Bart Schaefer  <schaefer@zsh.org>

	* 12773: Doc/Zsh/contrib.yo, Functions/Zle/smart-insert-last-word:
	Add the smart-insert-last-word function from zsh-users/3272.
	Change "completion style" to "widget style" in a few places.

2000-09-07  Sven Wischnowsky  <wischnow@zsh.org>

	* 12769: Completion/Builtins/_cd: more sensible value
	
	* 12768: as suggested by Andrej (12767): Completion/Bsd/_bsd_pkg,
	Completion/Bsd/_kld, Completion/User/_gcc, Completion/User/_gdb,
 	Completion/User/_mailboxes, Completion/User/_zdump: stick some
 	`N's into glob patterns
	
2000-09-06  Bart Schaefer  <schaefer@zsh.org>

	* 12765,12766: Doc/Zsh/builtins.yo, Doc/Zsh/contrib.yo: Eliminate
	use of "wordcode".

2000-09-06  Peter Stephenson  <pws@csr.com>

	* 12762: Akinori MUSHA: configure.in, Completion/Bsd/_kld:
	changes for new FreeBSD releases.

2000-09-06  Andrej Borsenkow <Andrej.Borsenkow@mow.siemens.ru>
